Test against JFR